--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
-title: Intro on Github Pages
+title: Github Journey
 author: Priabala
-description: Learn about Github Pages
+description: My github journey
